check working, neumorphism added in css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formularz</title>
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
   <link href="normalize.css" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet" type="text/css">
@@ -62,33 +63,33 @@
         <legend class="fieldset__description">ulubiony display CSS:</legend>
         <p class="form__line--radio">
           <input class="form__item--radio" id="block" value="block" type="radio" name="fav-display">
-          <label class="form-description" for="block">block</label>
+          <label class="form-description--radio" for="block">block</label>
         </p>
         
         <p>
           <input class="form__item--radio" id="inline-block" value="inline-block" type="radio" name="fav-display">
-          <label class="form-description" for="inline-block">inline-block</label>
+          <label class="form-description--radio" for="inline-block">inline-block</label>
         </p>
 
         <p>
           <input class="form__item--radio" id="flex" value="flex" type="radio" name="fav-display">
-          <label class="form-description" for="flex">flex</label>
+          <label class="form-description--radio" for="flex">flex</label>
         </p>
 
         <p>
           <input class="form__item--radio" id="grid" value="grid" type="radio" name="fav-display">
-          <label class="form-description" for="grid">grid</label>
+          <label class="form-description--radio" for="grid">grid</label>
         </p>
       </fieldset>
-      <p class="agreement">Wyrażam zgodę na wpisanie mnie na listę kandydatów do Akademii Gwiezdnej Floty.</p>
+      <p class="agreement">Wyrażam zgodę na wpisanie mnie na listę kandydatów do Akademii Gwiezdnej Floty oraz na przetwarzanie moich danych osobowych w celach rekrutacyjnych.</p>
       <p class="agreement__input">
         <input class="form__item--checkbox" id="agree" checked type="checkbox" name="agree"></input>
-        <label class="form-description" for="agree">Zgadzam się</label>
+        <label class="form-description--checkbox" for="agree">Zgadzam się</label>
       </p>
 
 
       <p>
-          <input class="form__item--send" type="submit" name="submit" value="Send">
+          <input class="form__item--send" type="submit" name="submit" value="Wyślij formularz">
       </p>
      
 
