--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 
 <body>
+  <div class="embellishment embellishment--left">formularz</div>
+  <div class="embellishment embellishment--right">formularz</div>  
   <main>
     <h1>formularz testowy</h1>
     <form class="form" action="https://dev.cotenfrontend.pl" method="post">
@@ -83,7 +85,7 @@
       </fieldset>
       <p class="agreement">Wyrażam zgodę na wpisanie mnie na listę kandydatów do Akademii Gwiezdnej Floty oraz na przetwarzanie moich danych osobowych w celach rekrutacyjnych.</p>
       <p class="agreement__input">
-        <input class="form__item--checkbox" id="agree" checked type="checkbox" name="agree"></input>
+        <input class="form__item--checkbox" id="agree" checked="" type="checkbox" name="agree"></input>
         <label class="form-description--checkbox" for="agree">Zgadzam się</label>
       </p>
 
