--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div class="embellishment embellishment--right">formularz</div>
   <main>
     <h1>formularz testowy</h1>
+    <p id="output" class="current-date"></p>
     <form class="form" action="https://dev.cotenfrontend.pl" method="post">
       <p class="form__line">
         <label class="form__description" for="title">tytuł:</label>
