--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="embellishment embellishment--left">formularz</div>
   <div class="embellishment embellishment--right">formularz</div>
   <main>
-    <h1>formularz testowy</h1>
+    <h1 class="main-header">formularz testowy</h1>
     <p id="output" class="current-date"></p>
     <form class="form" action="https://dev.cotenfrontend.pl" method="post">
       <p class="form__line">
