button "change-mode" added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <div class="embellishment embellishment--right">formularz</div>
   <main>
     <h1 class="main-header">formularz testowy</h1>
-    <p id="output" class="current-date"></p>
+    <div class="date-and-mode">
+      <p id="output" class="current-date"></p>
+      <button class="change-mode">tryb ciemny</button>
+    </div>
     <form class="form" action="https://dev.cotenfrontend.pl" method="post">
       <p class="form__line">
         <label class="form__description" for="title">tytuł:</label>
