mode button working with one css custom property

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1 class="main-header">formularz testowy</h1>
     <div class="date-and-mode">
       <p id="output" class="current-date"></p>
-      <button class="change-mode">tryb ciemny</button>
+      <button class="change-mode change-mode--js" aria-label="przełącz tryb">przełącz tryb</button>
     </div>
     <form class="form" action="https://dev.cotenfrontend.pl" method="post">
       <p class="form__line">
