--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
   <main>
-    <div class="embellishment embellishment--left">formularz</div>
-    <div class="embellishment embellishment--right">formularz</div>
+      <div class="embellishment embellishment--left">formularz</div>
+      <div class="embellishment embellishment--right">formularz</div>
     <h1 class="main-header">formularz testowy</h1>
     <div class="date-and-mode">
       <p id="output" class="current-date"></p>
@@ -99,6 +99,11 @@
           <label class="form__description--radio" for="grid">grid</label>
         </p>
       </fieldset>
+
+      <div class="form__line form__line--color">
+        <label class="form__description" for="color">wybierz kolor:</label>
+        <input class="form__item form__item--color color--js" type="color" name="color" id="color">
+      </div>
 
       <p class="form__line--essay">
         <label class="form__description--essay" for="essay">Napisz kilka słów o sobie:</label>
