--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <textarea class="form__item form__item--essay" id="essay" type="text" name="essay"></textarea>
       </p>
 
-      <div class="form__line">
+      <div class="form__line--range">
         <label class="form__description--age" for="age">wiek:</label>
         <div class="range-wrapper range-wrapper--js">
         <input class="range range--js" id="age" type="range" name="age" min="18" max="118" list="years">
